--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 asgiref==3.6.0
 cachetools==5.3.0
-certifi @ file:///C:/b/abs_85o_6fm0se/croot/certifi_1671487778835/work/certifi
 charset-normalizer==3.1.0
 Django==4.1.7
 django-environ==0.10.0
@@ -21,7 +20,7 @@ gunicorn==20.1.0
 idna==3.4
 proto-plus==1.22.2
 protobuf==4.22.1
-psycopg2==2.9.5
+psycopg2-binary==2.9.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pytz==2023.2
