--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
     "routes": [
         {
             "src": "/(.)",
-            "dest": "/businessmanagement/wsgi.py"
+            "dest": "http://localhost:$PORT"
     }
     ]
 }
