--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "version": 1,
     "builds": [
         {
-            "src": "Dockerfile",
+            "src": "/Dockerfile",
             "use": "@vercel/docker",
             "config": {
                 "maxLambdaSize": "15mb"
