--- a/requirements_backup.txt
+++ b/requirements_backup.txt
@@ -5,9 +5,19 @@ Django==4.1.7
 django-environ==0.10.0
 django-storages==1.13.2
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
 drf-spectacular==0.26.1
-python-dotenv==1.0.0
+google-api-core==2.11.0
+google-auth==2.17.0
+google-cloud-core==2.3.2
+google-cloud-secret-manager==2.16.1
+google-cloud-storage==2.7.0
+google-crc32c==1.5.0
+google-resumable-media==2.4.1
+googleapis-common-protos==1.59.0
+grpc-google-iam-v1==0.12.6
+grpcio==1.53.0
+grpcio-status==1.53.0
+gunicorn==20.1.0
 idna==3.4
 proto-plus==1.22.2
 protobuf==4.22.1
