--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Django==4.1.7
 django-environ==0.10.0
 django-storages==1.13.2
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 drf-spectacular==0.26.1
 google-api-core==2.11.0
 google-auth==2.17.0
