--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ cachetools==5.3.0
 charset-normalizer==3.1.0
 Django==4.1.7
 django-environ==0.10.0
-django-googledrive-storage==1.6.0
+django-googledrive-storage
 django-storages==1.13.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
